# simple-tgbot

./: .gitignore  .gitmodules  LICENSE.txt  Makefile  README.md  pyproject.toml
simple_tgbot/: config.py
simple_tgbot/src/: ban.py  bot.py  bot_config.py  join.py  messages.py
simple_tgbot/src/chat/: administrators.py  messages.py
simple_tgbot/src/commands/: ban.py  ban_add.py  commands.py  help.py
simple_tgbot/src/git/: git_repo.py
